# mytestdjango

./: compose.yaml
client/: .dockerignore  Dockerfile
client/app/: page.tsx
nginx/: Dockerfile  default.conf
server/: .dockerignore  .env  .gitignore  Dockerfile  pyproject.toml  requirements.txt
server/server/: settings.py  urls.py
